--- a/insights-for-instagram/Base.lproj/Main.storyboard
+++ b/insights-for-instagram/Base.lproj/Main.storyboard
@@ -52,6 +52,61 @@
                                 <constraint firstAttribute="bottom" secondItem="4dO-Iu-9Ez" secondAttribute="bottom" constant="15" id="dw0-46-TdA"/>
                             </constraints>
                         </view>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="AuA-z4-vXQ">
+                            <rect key="frame" x="0.0" y="83" width="320" height="200"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JH6-hT-hFq">
+                                    <rect key="frame" x="20" y="46" width="279" height="133"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weekday." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mma-WH-dqA">
+                                            <rect key="frame" x="46" y="41" width="188" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="47T-IG-GLM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="Mma-WH-dqA" firstAttribute="centerX" secondItem="JH6-hT-hFq" secondAttribute="centerX" id="WZL-cB-1bV"/>
+                                        <constraint firstItem="Mma-WH-dqA" firstAttribute="centerY" secondItem="JH6-hT-hFq" secondAttribute="centerY" id="Xgt-Ut-SW3"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Best Day to Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6i-Ho-9L4">
+                                    <rect key="frame" x="20" y="0.0" width="226" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="10r-Qe-d36"/>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="27" id="M9R-QC-kkq"/>
+                                        <constraint firstAttribute="width" constant="226" id="byY-0c-2LW"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S9g-N7-BEs">
+                                    <rect key="frame" x="20" y="0.0" width="300" height="0.5"/>
+                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="lq3-8e-BJQ"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="JH6-hT-hFq" secondAttribute="bottom" constant="21" id="Bhh-7U-67L"/>
+                                <constraint firstAttribute="trailing" secondItem="S9g-N7-BEs" secondAttribute="trailing" id="FYt-nZ-XGM"/>
+                                <constraint firstItem="S9g-N7-BEs" firstAttribute="leading" secondItem="AuA-z4-vXQ" secondAttribute="leading" constant="20" id="Ibs-wR-T8L"/>
+                                <constraint firstAttribute="trailing" secondItem="JH6-hT-hFq" secondAttribute="trailing" constant="21" id="PNb-BN-QxD"/>
+                                <constraint firstItem="Q6i-Ho-9L4" firstAttribute="top" secondItem="AuA-z4-vXQ" secondAttribute="top" id="R3n-VW-hIT"/>
+                                <constraint firstItem="JH6-hT-hFq" firstAttribute="top" secondItem="AuA-z4-vXQ" secondAttribute="top" constant="46" id="UcS-Q1-QVu"/>
+                                <constraint firstItem="JH6-hT-hFq" firstAttribute="leading" secondItem="AuA-z4-vXQ" secondAttribute="leading" constant="20" id="ere-lG-9lu"/>
+                                <constraint firstItem="Q6i-Ho-9L4" firstAttribute="leading" secondItem="AuA-z4-vXQ" secondAttribute="leading" constant="20" id="pCv-yf-KPE"/>
+                                <constraint firstItem="S9g-N7-BEs" firstAttribute="top" secondItem="AuA-z4-vXQ" secondAttribute="top" id="rXb-fF-3ml"/>
+                            </constraints>
+                        </view>
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="Ch5-O9-Ye5" id="P7C-ZE-IvU"/>
@@ -72,7 +127,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHe-Uq-TEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2011.594202898551" y="-638.31521739130437"/>
+            <point key="canvasLocation" x="2010" y="-639.08450704225356"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
